<resources>
    <string name="app_name">Stick It To Em</string>
    <string name="user_prompt">Enter Username</string>
    <string name="pass_prompt">Enter Password</string>
    <string name="log_btn">Login</string>
    <string name="send">Send Stickers</string>
    <string name="hist_chat">Chat history or send more stickers</string>
    <string name="user">Username</string>
    <string name="welcome_user">Welcome!</string>
    <string name="notify">Message from:</string>
    <string name="sticker_name">Sticker name:</string>
    <string name="sticker_image">Sticker image:</string>
    <string name="back_btn">Back</string>
    <string name="num_sent">Num stickers sent</string>
    <string name="token">Token</string>
    <string name="stat">User Usage Stats</string>
    <string name="hist">History</string>
    <string name="notif">New sticker!</string>
    <string name="sticker">Sticker</string>
    <string name="cancel">Cancel</string>
</resources>