<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    android:background="@color/white">-->


    <ImageView
        android:id="@+id/logo_emoji"
        android:layout_width="158dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="303dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_emoji"
        app:layout_constraintVertical_bias="0.252" />

    <EditText
        android:id="@+id/username"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/user_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/log_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="421dp" />

</androidx.constraintlayout.widget.ConstraintLayout>